# flexquery

./: .gitignore  LICENSE  README.md  demo.sh  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
flexquery/: PLUGINS.md  flexquery.py  transform_csv.py  transform_xml.py
